// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`promptFileContents > should format multiple file contents 1`] = `
"<knowledge_base_files totalCount="3">
<instruction>Use the information from these files to answer the user's question. Always cite the source files.</instruction>
<file id="file-001" name="auth-guide.md">
First file content about API authentication.
</file>
<file id="file-002" name="db-setup.md">
Second file content about database setup and configuration.
</file>
<file id="file-003" name="deployment.md">
Third file content with deployment instructions.
</file>
</knowledge_base_files>"
`;

exports[`promptFileContents > should format single file content 1`] = `
"<knowledge_base_files totalCount="1">
<instruction>Use the information from these files to answer the user's question. Always cite the source files.</instruction>
<file id="file-001" name="document.md">
This is the file content with some important information.
</file>
</knowledge_base_files>"
`;

exports[`promptFileContents > should handle file with error 1`] = `
"<knowledge_base_files totalCount="1">
<instruction>Use the information from these files to answer the user's question. Always cite the source files.</instruction>
<file id="file-404" name="missing.md" error="File not found" />
</knowledge_base_files>"
`;

exports[`promptFileContents > should handle file with long content 1`] = `
"<knowledge_base_files totalCount="1">
<instruction>Use the information from these files to answer the user's question. Always cite the source files.</instruction>
<file id="file-long" name="comprehensive-guide.md">
# Comprehensive Guide

## Introduction
This is a very long document with multiple sections and detailed information.

## Section 1
Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.

## Section 2
Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.

## Conclusion
Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
</file>
</knowledge_base_files>"
`;

exports[`promptFileContents > should handle file with special characters in name 1`] = `
"<knowledge_base_files totalCount="1">
<instruction>Use the information from these files to answer the user's question. Always cite the source files.</instruction>
<file id="file-special" name="FAQ: Q&A (2024).md">
Content from a file with special characters in the name.
</file>
</knowledge_base_files>"
`;

exports[`promptFileContents > should handle mixed successful and error files 1`] = `
"<knowledge_base_files totalCount="3">
<instruction>Use the information from these files to answer the user's question. Always cite the source files.</instruction>
<file id="file-001" name="success.md">
Successfully loaded content from this file.
</file>
<file id="file-002" name="restricted.md" error="Permission denied" />
<file id="file-003" name="another-success.md">
Another successfully loaded file with more content.
</file>
</knowledge_base_files>"
`;

exports[`promptFileContents > should render a paged window with range attributes and a continue notice 1`] = `
"<knowledge_base_files totalCount="2">
<instruction>Use the information from these files to answer the user's question. Always cite the source files.</instruction>
<file id="file-paged" name="long.md" lines="1-2" totalLines="800" totalChars="30334" truncated="true">
line 1
line 2
[Showing lines 1-2 of 800. Call readKnowledge again with offset=3 to continue.]
</file>
<file id="file-complete" name="short.md" lines="1-1" totalLines="1" totalChars="9" truncated="false">
tail line
</file>
</knowledge_base_files>"
`;
